terraform/vpc.tf
# ##################################################
# VPC
# ##################################################
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name = "${local.project_name}-main"
  }
}

# ##################################################
# IGW
# ##################################################
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "${local.project_name}-main"
  }
}
